Updated wham non-uniform comparison to match the latest changes in gk-g0-app-mirror-fix

--- a/traverse-wham1x-compare_unif_vs_nonunif/Makefile
+++ b/traverse-wham1x-compare_unif_vs_nonunif/Makefile
@@ -112,17 +112,13 @@ EXT_LIBS = ${LAPACK_LIB} ${SUPERLU_LIB} ${MPI_LIBS} ${LUA_LIBS} ${NCCL_LIBS} -lm
 
 all: sim_unif sim_nonunif sim_unif_geofile sim_nonunif_geofile sim_reduced sim_reduced_geofile
 
-sim: sim_unif.c sim_nonunif.c sim_unif_geofile.c sim_nonunif_geofile.c sim_reduced.c sim_reduced_geofile.c
+sim: sim_unif.c sim_nonunif.c  sim_reduced.c
 	 ${CC} ${CFLAGS} ${INCLUDES} sim_unif.c -o sim_unif -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
 	 ${CC} ${CFLAGS} ${INCLUDES} sim_nonunif.c -o sim_nonunif -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
-	 ${CC} ${CFLAGS} ${INCLUDES} sim_unif_geofile.c -o sim_unif_geofile -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
-	 ${CC} ${CFLAGS} ${INCLUDES} sim_nonunif_geofile.c -o sim_nonunif_geofile -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
 	 ${CC} ${CFLAGS} ${INCLUDES} sim_reduced.c -o sim_reduced -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
-	 ${CC} ${CFLAGS} ${INCLUDES} sim_reduced_geofile.c -o sim_reduced_geofile -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
 clean:
 	rm -rf sim_unif sim_nonunif *.dSYM
-	rm -rf sim_unif_geofile sim_nonunif_geofile *.dSYM
-	rm -rf sim_reduced sim_reduced_geofile *.dSYM
+	rm -rf sim_reduced *.dSYM
 	rm -rf *.dSYM
 	
 
