--- a/stellar-mirror1x-compare-numeric-vs-mapc2p-nonuniform/mc2p/Makefile
+++ b/stellar-mirror1x-compare-numeric-vs-mapc2p-nonuniform/mc2p/Makefile
@@ -135,11 +135,10 @@ INCLUDES = -I${G0_INC_DIR} -I${LAPACK_INC} -I${SUPERLU_INC} -I${MPI_INC_DIR} -I$
 LIB_DIRS = -L${LAPACK_LIB_DIR} -L${SUPERLU_LIB_DIR} -L${MPI_LIB_DIR} -L${LUA_LIB_DIR} -L${NCCL_LIB_DIR} -L${CUDSS_LIB_DIR}
 EXT_LIBS = ${LAPACK_LIB} ${SUPERLU_LIB} ${MPI_RPATH} ${MPI_LIBS} ${LUA_RPATH} ${LUA_LIBS} ${NCCL_LIBS} ${CUDSS_RPATH} ${CUDSS_LIBS} -lm -lpthread -ldl
 
-all: sim_mc2p sim_numeric
+all: sim
 
-sim: sim_mc2p.c sim_numeric.c
-	 ${CC} ${CFLAGS} ${INCLUDES} sim_mc2p.c -o sim_mc2p -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
-	 ${CC} ${CFLAGS} ${INCLUDES} sim_numeric.c -o sim_numeric -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
+sim: sim.c
+	 ${CC} ${CFLAGS} ${INCLUDES} sim.c -o sim -L${G0_LIB_DIR} ${G0_RPATH} ${G0_LIBS} ${LIB_DIRS} ${EXT_LIBS}
 
 clean:
-	rm -rf sim_mc2p sim_mc2p.dSYM sim_numeric sim_numeric.dSYM
+	rm -rf sim sim.dSYM
